--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,14 @@
     <title>Homework 10</title>
 
     <link rel="stylesheet" href="css/common.css" />
+
+    <script src="https://unpkg.com/slim-select@latest/dist/slimselect.min.js"></script>
+    <link href="https://unpkg.com/slim-select@latest/dist/slimselect.min.css" rel="stylesheet">
   </head>
   <body>
 
-      <select class="breed-select"></select>
+    <select id="breed-select" class="breed-select"></select>
+
       <p class="loader">Loading data, please wait...</p>
 
       <div class="cat-info">
